[project]
name = "devops-incident-env"
version = "1.0.0"
description = "DevOps Incident Response OpenEnv"
authors = [
    {name = "chandu"}
]

dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "pydantic==2.8.2",
    "requests==2.32.3",
    "openai>=2.7.2",
    "python-dotenv==1.0.1",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
